# bmkk

./: .gitignore  AGENTS.md  package-lock.json  package.json
backend/: .env.example  PROJECT_STATUS.md  pyproject.toml
backend/alembic/: env.py
backend/app/: celery_app.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  evaluations.py  health.py  models.py  overview.py
backend/app/clients/: __init__.py  openai_compatible.py
backend/app/core/: api_styles.py  config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  eval_model.py  eval_result.py  question.py
backend/app/schemas/: __init__.py  evaluation.py  health.py  model.py  overview.py
backend/app/services/: batch_evaluation_service.py  evaluation_result_service.py  evaluation_service.py  judge_service.py  model_service.py  overview_service.py
backend/app/tasks/: evaluation.py
backend/scripts/: dev_server.py  migrate_eval_models_add_api_style.py  migrate_eval_models_add_release_date.py  migrate_eval_results_add_attempt_metadata.py  migrate_eval_results_add_result_overrides.py  migrate_eval_results_replace_normalized_with_judge_feedback.py  reset_eval_results.py  run_batch_eval.py  run_judge_backfill.py
backend/tests/: test_batch_evaluation_routes.py  test_batch_evaluation_service.py  test_evaluation_routes.py  test_evaluation_service.py  test_health.py  test_judge_service.py  test_logging_config.py  test_model_routes.py  test_openai_compatible_client.py  test_overview_routes.py
(+16 files in other folders)
